log
Thu Mar 19 06:54:55 PM UTC 2026: 
 tests:  0|5
total_score: 0/70
cd9d028
Thu Mar 19 07:13:44 PM UTC 2026: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:55:27: error: expected expression before ‘List’
   55 |    void* elemento = first(List *L);
      |                           ^~~~
e5f5926
Thu Mar 19 07:14:55 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Thu Mar 19 07:24:06 PM UTC 2026: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:55:27: error: invalid use of incomplete typedef ‘List’
   55 |    void* elemento = first(*L);
      |                           ^~
exercises.c:58:23: error: invalid use of incomplete typedef ‘List’
   58 |       elemento = next(*L);
      |                       ^~
4eeba76
